Add Locale and bootstrap

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -17,6 +17,7 @@ en:
     header:
       logout: "Logout"
       sign_up: "Sign Up"
+      welcome: "Welcome %{email} "
       welcome: "Welcome, %{email} "
       log_in: "Log In"
       admin_panel: "Admin Panel"
@@ -38,9 +39,6 @@ en:
   test_passages:
     result:
       header: "Test %{title} was completed"
-      gist:
-        success: "%{gist_link} was successfully created "
-        failure: "An error occurred while saving gist"
   admin:
     tests:
       create:
@@ -60,17 +58,11 @@ en:
     admin_header:
       logout: "Logout"
       sign_up: "Sign Up"
+
       welcome: "Welcome, %{email} "
       log_in: "Log In"
       admin_panel: "Admin Panel"
-      gists: "Gists"
-    gists:
-          question: 'Question'
-          gist_link: 'Gist URL'
-          user: 'User'
 
   tests_mailer:
     completed_test:
       subject: "You just completed the TestGuru test!"
-
-    question: "Question %{question}"
