--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,5 +1,10 @@
 en:
+  rules:
+    category: 'Category'
+    first_try: 'First_try'
+    level: 'Level'
   hello: "Hello world"
+
   helpers:
     select:
       prompt: 'Select category'
@@ -16,11 +21,11 @@ en:
     header:
       logout: "Logout"
       sign_up: "Sign Up"
-      welcome: "Welcome %{email} "
       welcome: "Welcome, %{email} "
       log_in: "Log In"
       admin_panel: "Admin Panel"
       feedback: "Give a Feedback"
+      badge: "Show My Badges"
     errors:
       header:
         one: "%{count} error detected"
@@ -36,14 +41,25 @@ en:
     test:
       start: "Start"
 
-      feedback_forms:
-        new:
-          feedback_form: 'Feedback Form'
-        create:
-          success: "Feedback was successfully send to Admin"
+  badges:
+    index:
+      header: "Your Badges"
+      name: "Name"
+      file: "Image"
+      badges: "All Badges"
+      reason: "Reason"
+
+  feedback_forms:
+    new:
+      feedback_form: 'Feedback Form'
+    create:
+      success: "Feedback was successfully send to Admin"
   test_passages:
     result:
       header: "Test %{title} was completed"
+    gist:
+      success: "%{gist_link} was successfully created "
+      failure: "An error occurred while saving gist"
   admin:
     tests:
       create:
@@ -67,11 +83,33 @@ en:
     admin_header:
       logout: "Logout"
       sign_up: "Sign Up"
-
       welcome: "Welcome, %{email} "
       log_in: "Log In"
       admin_panel: "Admin Panel"
+      badge: "Edit Badge"
+      gists: "Gists"
+    gists:
+      question: 'Question'
+      gist_link: 'Gist URL'
+      user: 'User'
+    badges:
+      index:
+        badges: "All Badges"
+        name: "Name"
+        file: "File"
+        reason: "Reason"
+        actions: "Actions"
+        add_badge: "Add Badge"
+      form:
+        badges: "To Badges Page"
+      badge:
+        edit: "Edit"
+        delete: "Delete"
+        show: "Show"
+      create:
+        success: "Badge Create Successful"
 
   tests_mailer:
     completed_test:
       subject: "You just completed the TestGuru test!"
+  question: "Question %{question}"
