--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -12,6 +12,7 @@ ru:
         title: "Название"
         level: "Уровень"
         category_id: "Категория"
+        time: "Время на тест(мин.)"
   shared:
     header:
       logout: "Выйти"
@@ -33,6 +34,7 @@ ru:
       author: "Автор"
       question_count: "Количество вопросов"
       actions: "Действия"
+      time: "Время на тест(мин.)"
     test:
       start: "Начать"
   test_passages:
@@ -53,9 +55,16 @@ ru:
         question_count: "Количество вопросов"
         actions: "Действия"
         add_test: "Добавить тест"
+        time: "Время на тест(мин.)"
       test:
         edit: "Изменить"
         delete: "Удалить"
+        show: "Показать"
+        minutes:
+          few: "%{minutes} Минуты"
+          many: "%{minutes} Минут"
+          one: "%{minutes} Минута"
+          other: "%{minutes} Минут"
     admin_header:
       logout: "Выйти"
       sign_up: "Зарегистрироваться"
